src/page/error/error-404/error-404-without-contact/example/index.ejs
<%
const sample = getSample(include);
%>

<%- sample('', './sample/error-404-without-contact', {}, true, '../../../example/layout', { search: true }); %>
